--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,6 +70,11 @@
         </li>
         <li class="nav-item">
         <% if customer_signed_in? %>
+        <a class="nav-link px-2" href="/my_page">マイページ</a>
+        <% else %>
+        <% end %>
+        <li class="nav-item">
+        <% if customer_signed_in? %>
         <a class="nav-link px-2" href="/customers/sign_out">ログアウト</a>
         <% else %>
         <a class="nav-link px-2" href="/customers/sign_in">ログイン</a>
