--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,7 +1,10 @@
-<div class="col-md-8 offset-md-1">
 <table class="table">
+
 <h4 class="mark">マイページ</h4>
+
 <a>登録情報</a> <a class="btn btn-outline-success m-5" href="/customers/information/edit" role="button">編集する</a>
+
+
   <table class="table table-striped table-hover w-50">
   <tbody>
     <tr>
@@ -16,8 +19,36 @@
       <td>メールアドレス</td>
       <td><%= @customer.email %></td>
     </tr>
+  </table>
 
-</table>
+
+      <h4>星評価一覧</h4>
+
+<table class="table table-striped table-hover w-50">
+<% @shop_comments.each do |t| %>
+  <tbody>
+    <tr>
+      <td>店舗名</td>
+      <td><%= t.post_shop.name %></td>
+    </tr>
+    <tr>
+    <td>星評価</td>
+    <td><% if t.rate? %>
+    <% for i in 1..t.rate do %>
+    ★
+    <% end %>
+    <% end %></td>
+    </tr>
+    <tr>
+    <td><%= link_to "削除", destroy_shop_comment_path(t.id), method: :delete %></td>
+    <td></td>
+    </tr>
+<% end %></table>
+
+
+
+
+
   <h4>お気に入り一覧</h4>
   <thead>
     <tr>
@@ -41,3 +72,7 @@
     <% end %>
   </tbody>
 </table>
+
+
+
+
