--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,5 @@
-
-<main>
+<div class = "top"><h2>雑貨Life</h2></div>
+<div class="sidebar">
 <h4>エリア一覧</h4>
 <table>
 <th>
@@ -11,6 +11,7 @@
     <% end %>
 </th>
 </table>
+</div>
 
 <div class = "topmenu">
 <div class="d-grid gap-2">
@@ -24,4 +25,3 @@
   <img src="/assets/room.jpg" width="400" height="300" border="0" onMouseOver="this.src='/assets/room2.jpg'" width="400" height="300" onMouseOut="this.src='/assets/room.jpg'" />
 </a>
 </div></div>
-</main>
