--- a/app/views/public/post_shops/index.html.erb
+++ b/app/views/public/post_shops/index.html.erb
@@ -1,11 +1,11 @@
 <h4>雑貨屋一覧
-<%= link_to "新規投稿", shops_new_path, class:"btn btn-outline-success" %>
+<%= link_to "新規投稿", shops_new_path, class:"btn btn-outline-dark" %>
 </h4>
   <div class="container">
   <div class="row">
-    <div class="col-md-3 mb-4">
+    <div class="col-md-4 mb-4">
       <div class="card">
-        見本<%= image_tag "no_image.jpg",size: "100x120", class: 'card-img-top' %>
+        見本<%= image_tag "no_image.jpg",size: "200x180", class: 'card-img-top' %>
         <button type="button" class="btn btn-outline-danger">店舗名</button>
         投稿者名：</br>
         エリア：
@@ -15,9 +15,9 @@
 
 
 <% @post_shops.each do |post_shop| %>
-<div class="col-md-3 mb-4">
+<div class="col-md-4 mb-4">
       <div class="card">
-        <%= image_tag post_shop.image, size: "150x150", class: 'card-img-top' %>
+        <%= image_tag post_shop.image, size: "200x200", class: 'card-img-top' %>
       <%= link_to post_shop.name, "/shops/#{post_shop.id}" ,class:"btn btn-outline-dark" %>
       <%= post_shop.customer.nickname %></br>
 
