--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -21,7 +21,7 @@ body {
   // font-family: 'Yu Gothic UI',sans-serif;
     // font-family: "g_pencilkaisho_free";
     // src: url('../javascript/fonts/azukiB.ttf');
-    background-color:#f0fff0;
+    // background-color:#f0fff0;
 }
 
 .h4{
@@ -37,6 +37,7 @@ body {
 
 // 会員画面
 
+
 // トップ画面
 .top{
   margin-bottom:40px;
@@ -50,7 +51,7 @@ body {
 }
 
 .sidebar{
-  width:150px;
+  width:180px;
   display: inline-block;
 
 }
