--- a/app/views/public/post_rooms/new.html.erb
+++ b/app/views/public/post_rooms/new.html.erb
@@ -1,6 +1,6 @@
 <body>
   <div class = "title">
-    <h4 class="mark mb-5">お部屋紹介</h4></div>
+    <h4><%= image_tag "flower.jpg", size: '80x80' %>お部屋紹介</h4></div>
   <div class = "text">
       <%= form_with model: @post_room, url: rooms_path do |f| %>
       <div class="container w-50">
