--- a/app/views/public/post_shops/new.html.erb
+++ b/app/views/public/post_shops/new.html.erb
@@ -1,6 +1,6 @@
 <body>
   <div class = "title">
-    <h4 class="mark mb-5">おすすめの雑貨屋新規投稿</h4></div>
+    <h4><%= image_tag "chair.jpg", size: '80x80' %>おすすめの雑貨屋新規投稿</h4></div>
   <div class = "text">
       <%= form_with model: @post_shop, url: shops_path do |f| %>
       <div class="container w-50">
