--- a/app/views/public/areas/index.html.erb
+++ b/app/views/public/areas/index.html.erb
@@ -1,4 +1,4 @@
-<h4 class="mark"><%= @area.name %>店舗一覧</h4>
+<h4><%= image_tag "cair.jpg", size: '80x80' %><%= @area.name %>店舗一覧</h4>
 <div class="container">
   <div class="row">
     <div class="col-md-4 mb-4">
@@ -6,7 +6,10 @@
         見本<%= image_tag "no_image.jpg",size: "200x180", class: 'card-img-top' %>
         店舗名：</br>
         投稿者名：
+        <% if customer_signed_in? %>
         <button type="button" class="btn btn-outline-success">編集する</button>
+        <% else %>
+        <% end %>
       </div>
 </div>
 <% @post_shops.each do |post_shop| %>
@@ -18,7 +21,10 @@
         <% end %>
       <%= post_shop.name %></br>
       <%= post_shop.customer.nickname %>
+      <% if current_customer %>
       <%= link_to '編集する', "/shops/#{post_shop.id}/edit", class:"btn btn-outline-dark" %>
+      <% else %>
+      <% end %>
       </div>
 </div>
 <% end %>
