--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,30 +1,7 @@
-<table class="table">
-
-<h4 class="mark">マイページ</h4>
-
-<a>登録情報</a> <a class="btn btn-outline-success m-5" href="/customers/information/edit" role="button">編集する</a>
-
-
-  <table class="table table-striped table-hover w-50">
-  <tbody>
-    <tr>
-      <td>氏名</td>
-      <td><%= @customer.name %></td>
-    </tr>
-    <tr>
-      <td>投稿名</td>
-      <td><%= @customer.nickname %></td>
-    </tr>
-    <tr>
-      <td>メールアドレス</td>
-      <td><%= @customer.email %></td>
-    </tr>
-  </table>
-
-
-      <h4>星評価一覧</h4>
-
-<table class="table table-striped table-hover w-50">
+<h4><%= image_tag "cat.jpg", size: '80x80' %>マイページ</h4>
+<div class="sidebar">
+<h4>星評価一覧</h4>
+<table>
 <% @shop_comments.each do |t| %>
   <tbody>
     <tr>
@@ -44,34 +21,58 @@
     <td></td>
     </tr>
 <% end %></table>
+</div>
 
-
-
-
-
+<div class="sidebar">
   <h4>お気に入り一覧</h4>
-  <thead>
-    <tr>
-      <th>投稿者名</th>
-      <th>店舗画像</th>
-      <th>店舗名</th>
-    </tr>
-  </thead>
+  <table>
+  <% @likes.each do |like| %>
   <tbody>
-    <% @likes.each do |like| %>
-      <tr>
-        <td><%= image_tag like.post_shop.image, size: "100x100" %></td>
-        <td>
-        <td><%= like.post_shop.customer.nickname %></td>
-        <td>
+    <tr>
+      <td>投稿者名</td>
+      <td><%= like.post_shop.customer.nickname %></td>
+    </tr>
+    <tr>
+      <td>店舗画像</td>
+      <td><%= image_tag like.post_shop.image, size: "100x100" %></td>
+    </tr>
+    <tr>
+      <td>店舗名</td>
+      <td>
           <%= link_to post_shop_path(like.post_shop) do %>
-            <%= like.post_shop.name %>
+          <%= like.post_shop.name %>
           <% end %>
-        </td>
-      </tr>
-    <% end %>
+      </td>
+    </tr>
   </tbody>
+  <% end %>
+
 </table>
+</div>
+
+<div class = "topmenu">
+
+
+<a>登録情報</a> <a class="btn btn-outline-success m-5" href="/customers/information/edit" role="button">編集する</a>
+
+  <table class="table table-striped table-hover">
+  <tbody>
+    <tr>
+      <td>氏名</td>
+      <td><%= @customer.name %></td>
+    </tr>
+    <tr>
+      <td>投稿名</td>
+      <td><%= @customer.nickname %></td>
+    </tr>
+    <tr>
+      <td>メールアドレス</td>
+      <td><%= @customer.email %></td>
+    </tr>
+  </table>
+</div>
+
+
 
 
 
