--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,6 +69,9 @@
           <a class="nav-link" href="/rooms">お部屋一覧</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/shop_comments">評価一覧</a>
+        </li>
+        <li class="nav-item">
         <% if customer_signed_in? %>
         <a class="nav-link px-2" href="/my_page">マイページ</a>
         <% else %>
@@ -78,6 +81,11 @@
         <a class="nav-link px-2" href="/customers/sign_out">ログアウト</a>
         <% else %>
         <a class="nav-link px-2" href="/customers/sign_in">ログイン</a>
+        <% end %>
+        <li class="nav-item">
+        <% if customer_signed_in? %>
+        <% else %>
+        <a class="nav-link px-2" href="/customers/sign_up">会員登録</a>
         <% end %>
         </li>
     </div>
