--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,19 +28,19 @@
           <a class="nav-link active" aria-current="page" href="/admin/areas">エリア一覧</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin/customers">会員一覧</a>
+          <a class="nav-link active" aria-current="page" href="/admin/customers">会員一覧</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin/post_shops">雑貨屋投稿一覧</a>
+          <a class="nav-link active" aria-current="page" href="/admin/post_shops">雑貨屋投稿一覧</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin/post_rooms">お部屋一覧</a>
+          <a class="nav-link active" aria-current="page" href="/admin/post_rooms">お部屋一覧</a>
         </li>
         <li class="nav-item">
         <% if admin_signed_in? %>
-        <a class="nav-link px-2" href="/admin/sign_out">ログアウト</a>
+        <a class="nav-link active" aria-current="page" href="/admin/sign_out">ログアウト</a>
         <% else %>
-        <a class="nav-link px-2" href="/admin/sign_in">ログイン</a>
+        <a class="nav-link active" aria-current="page" href="/admin/sign_in">ログイン</a>
         <% end %>
         </li>
     </div>
@@ -60,33 +60,36 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link active" aria-current="page" href="/about">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/shops">雑貨屋一覧</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/rooms">お部屋一覧</a>
+          <a class="nav-link active" aria-current="page" href="/rooms">お部屋一覧</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/shop_comments">評価一覧</a>
+          <a class="nav-link active" aria-current="page" href="/shop_comments">評価一覧</a>
         </li>
         <li class="nav-item">
         <% if customer_signed_in? %>
-        <a class="nav-link px-2" href="/my_page">マイページ</a>
+        <a class="nav-link active" aria-current="page" href="/my_page">マイページ</a>
         <% else %>
         <% end %>
         <li class="nav-item">
         <% if customer_signed_in? %>
-        <a class="nav-link px-2" href="/customers/sign_out">ログアウト</a>
+        <a class="nav-link active" aria-current="page" href="/customers/sign_out">ログアウト</a>
         <% else %>
-        <a class="nav-link px-2" href="/customers/sign_in">ログイン</a>
+        <a class="nav-link active" aria-current="page" href="/customers/sign_in">ログイン</a>
         <% end %>
         <li class="nav-item">
         <% if customer_signed_in? %>
         <% else %>
-        <a class="nav-link px-2" href="/customers/sign_up">会員登録</a>
+        <a class="nav-link active" aria-current="page" href="/customers/sign_up">会員登録</a>
         <% end %>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link px-2" href="/admin/sign_in">管理者</a>
         </li>
     </div>
   </div>
