--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,7 +1,10 @@
-<h2>会員登録</h2>
-<%= form_with model: @customer, url: registration_path(resource_name) do |f| %>
+<body>
+  <div class = "title">
+  <h2>会員登録</h2>
+  <div class = "text">
+  <%= form_with model: @customer, url: registration_path(resource_name) do |f| %>
 
-  <%= render "public/shared/error_messages", resource: resource %>
+    <%= render "public/shared/error_messages", resource: resource %>
 
   <div class="field">
     <%= f.label :名前 %><br>
@@ -34,6 +37,8 @@
   <div class="actions">
     <%= f.submit "会員登録" %>
   </div>
-<% end %>
+  <% end %>
 
 <%= render "public/shared/links" %>
+  </div>
+  </body>
