--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -92,7 +92,8 @@
  <div class="container-fluid">
   <div class="row">
     <div class="col no-gutters">
-    <img src="/assets/about.jpg" width="140%" height="650">
+    <!--<img src="/assets/about.jpg" width="140%" height="650">-->
+    <%= image_tag asset_path('about.jpg'), class: 'image_about' %>
     </div>
     <p class="lead">雑貨Lifeへようこそ</br>
   雑貨用品好きな方のためのサイトとなっております。</br>
