--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -45,6 +45,11 @@
   display: inline-block;
 }
 
+.image_top{
+  width : 400px;
+  height: 300px;
+}
+
 .sidebar{
   width:180px;
   display: inline-block;
@@ -82,7 +87,11 @@ p{
 
 
 }
-
+// 画像 (about)
+.image_about{
+  width: 100%;
+  height: 665px;
+}
 
 // お気に入り
 .star-field{
@@ -112,7 +121,3 @@ p{
   color: rgb(255, 145, 0);
 }
 
-.image_about{
-  width: 100%;
-  height: 665px;
-}
