--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -16,11 +16,14 @@
 <div class="d-grid gap-2">
 <a class="btn btn-secondary" href="/shops" type="submit">
   店舗一覧</br>
-  <img src="/assets/shop.jpg" width="400" height="300" border="0" onMouseOver="this.src='/assets/shop2.jpg'" width="400" height="300" onMouseOut="this.src='/assets/shop.jpg'" />
+
+  <%= image_tag('shop.jpg', onmouseover: "this.src='#{asset_path('shop2.jpg')}'", onmouseout: "this.src='#{asset_path('shop.jpg')}'", class: 'image_top') %>
+
 </a>
 
 <a class="btn btn-secondary" href="/rooms" type="submit">
   お部屋紹介</br>
-  <img src="/assets/room.jpg" width="400" height="300" border="0" onMouseOver="this.src='/assets/room2.jpg'" width="400" height="300" onMouseOut="this.src='/assets/room.jpg'" />
+  <%= image_tag('room.jpg', onmouseover: "this.src='#{asset_path('room2.jpg')}'", onmouseout: "this.src='#{asset_path('room.jpg')}'", class: 'image_top') %>
+  
 </a>
 </div></div>
