--- a/app/views/admin/post_shops/index.html.erb
+++ b/app/views/admin/post_shops/index.html.erb
@@ -23,6 +23,7 @@
       <td><%= post_shop.created_at.strftime('%Y/%m/%d') %></td>
       <td><%= post_shop.area.name %></td>
       <td><%= post_shop.introduction %></td>
+      <td><%= link_to '削除画面', "/admin/post_shops/#{post_shop.id}", class:"btn btn-outline-dark" %></td>
     </tr>
 <% end %>
 </table>
