--- a/app/views/admin/post_shops/show.html.erb
+++ b/app/views/admin/post_shops/show.html.erb
@@ -1,5 +1,3 @@
-<h1>Admin::PostShops#show</h1>
-<p>Find me in app/views/admin/post_shops/show.html.erb</p>
 <h4>雑貨屋投稿一覧</h4>
 
   <div class="col-md-8 offset-md-1">
@@ -8,15 +6,24 @@
     <tr>
       <th>投稿写真</th>
       <th>投稿者名</th>
-      <th>投稿日</th>
+      <th>店舗名</th>
       <th>エリア</th>
       <th>紹介文</th>
+      <th></th>
     </tr>
 
     <tr>
+      <td>
+      <% if @post_shop.image.attached? %>
+        <%= image_tag @post_shop.image,size: "200x200" %>
+      <% else %>
+        <%= image_tag 'no_image', size: "200x200" %>
+      <% end %></td>
+      <td><%= @post_shop.customer.nickname %></td>
       <td><%= @post_shop.name %></td>
-      <!--<td><%= @post_shop.created_at.strftime('%Y/%m/%d') %></td>-->
-      <!--<td><%= @post_shop.introduction %></td>-->
+      <td><%= @post_shop.area.name %></td>
+      <td><%= @post_shop.introduction %></td>
+      <td><%= link_to "削除する", admin_destroy_post_shop_path(@post_shop.id), class:"btn btn-outline-dark",method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
     </tr>
 
 </table>
