--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -17,6 +17,10 @@
     <% end %></td>
     </tr>
     <tr>
+      <td>コメント</td>
+      <td><%= t.comment %></td>
+    </tr>
+    <tr>
     <td><%= link_to "削除", destroy_shop_comment_path(t.id), method: :delete %></td>
     <td></td>
     </tr>
