--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,3 +1,4 @@
+<!--管理者トップページ-->
 <body>
   <div class = "title">
     <h2>管理者ページ</h2>
@@ -7,4 +8,3 @@
     <p><%= @customers.count %>人</p>
   </div>
 </body>
-<!--<footer>koakokokok</footer>-->
