--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,4 +1,4 @@
-<div class = "top"><h2>雑貨Life</h2></div>
+<div class = "top"><h3>ようこそ雑貨Lifeへ</h3></div>
 <div class="sidebar">
 <h4>エリア一覧</h4>
 <table>
