--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -15,7 +15,7 @@
 <div class = "topmenu">
 <div class="d-grid gap-2">
 <a class="btn btn-secondary" href="/shops" type="submit">
-  店舗一覧</br>
+  雑貨屋一覧</br>
 
   <%= image_tag('shop.jpg', onmouseover: "this.src='#{asset_path('shop2.jpg')}'", onmouseout: "this.src='#{asset_path('shop.jpg')}'", class: 'image_top') %>
 
