--- a/app/views/public/post_shops/index.html.erb
+++ b/app/views/public/post_shops/index.html.erb
@@ -30,7 +30,7 @@
       <%= link_to post_shop.name, "/shops/#{post_shop.id}" ,class:"btn btn-outline-dark" %>
       <%= post_shop.customer.nickname %></br>
 
-      <%= post_shop.area_id %>
+      <%= post_shop.area.name %>
       </div>
 </div>
 <% end %>
