--- a/app/views/public/post_shops/show.html.erb
+++ b/app/views/public/post_shops/show.html.erb
@@ -62,12 +62,11 @@
     <label for="star1">★</label>
 
   <%= hidden_field_tag "shop_comment[post_shop_id]", @post_shop.id %>
-</div></th></tr>
+</div></th>
+</tr>
 <tr>
 <th>コメント</th>
 <th><%= f.text_field :comment %></th>
-</tr>
-<tr>
   <th></th>
   <th>
   <%= f.submit "評価する" %></th>
