--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -17,7 +17,7 @@
     <div class="col mb-2"><%= f.text_field :name, autofocus: true, autocomplete: "name" %></div>
 
 
-    <div class="col mb-2"><%= f.label :ニックネーム %></div>
+    <div class="col mb-2"><%= f.label :投稿名 %></div>
     <div class="col mb-2"><%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" %></div>
 
     <div class="col mb-2"><%= f.label :メールアドレス %></div>
