--- a/app/views/public/post_shops/index.html.erb
+++ b/app/views/public/post_shops/index.html.erb
@@ -34,8 +34,11 @@
       </div>
 </div>
 <% end %>
-<%= paginate @post_shops %>
+
     </div>
-    
+
   </div>
+  
+<footer>
+<%= paginate @post_shops %></footer>
   <!--</div>-->
