--- a/app/views/admin/post_shops/index.html.erb
+++ b/app/views/admin/post_shops/index.html.erb
@@ -6,7 +6,7 @@
     <tr>
       <th>投稿写真</th>
       <th>投稿者名</th>
-      <th>投稿日</th>
+      <th>投稿日時</th>
       <th>エリア</th>
       <th>紹介文</th>
     </tr>
@@ -20,7 +20,7 @@
         <% end %>
       </td>
       <td><%= post_shop.customer.nickname %></td>
-      <td><%= post_shop.created_at.strftime('%Y/%m/%d') %></td>
+      <td><%= post_shop.created_at.strftime('%Y/%m/%d(%R)') %></td>
       <td><%= post_shop.area.name %></td>
       <td><%= post_shop.introduction %></td>
       <td><%= link_to '削除画面', "/admin/post_shops/#{post_shop.id}", class:"btn btn-outline-dark" %></td>
