--- a/app/views/admin/post_shops/index.html.erb
+++ b/app/views/admin/post_shops/index.html.erb
@@ -8,7 +8,6 @@
       <th>投稿者名</th>
       <th>投稿日時</th>
       <th>エリア</th>
-      <th>紹介文</th>
     </tr>
 <% @post_shops.each do |post_shop| %>
     <tr>
@@ -19,11 +18,11 @@
         <%= image_tag 'no_image', size: "200x200" %>
         <% end %>
       </td>
+      <td><%= link_to post_shop.name, "/admin/post_shops/#{post_shop.id}" %></td>
       <td><%= post_shop.customer.nickname %></td>
       <td><%= post_shop.created_at.strftime('%Y/%m/%d(%R)') %></td>
       <td><%= post_shop.area.name %></td>
-      <td><%= post_shop.introduction %></td>
-      <td><%= link_to '削除画面', "/admin/post_shops/#{post_shop.id}", class:"btn btn-outline-dark" %></td>
+      
     </tr>
 <% end %>
 </table>
