--- a/app/views/admin/post_shops/index.html.erb
+++ b/app/views/admin/post_shops/index.html.erb
@@ -1,6 +1,7 @@
 
 <h4>雑貨屋投稿一覧</h4>
 
+<div class="col-md-8 offset-md-1">
 <table class="table">
 
     <tr>
@@ -26,3 +27,6 @@
     </tr>
 <% end %>
 </table>
+</div>
+<footer>
+<%= paginate @post_shops %></footer>
