--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -5,7 +5,7 @@
 <th>
     <% @areas.each do |area| %>
       <tr>
-        <%= link_to area.name, "/areas/#{area.id}", class: "text-secondary" %></br>
+        <%= link_to area.name, "/areas/#{area.id}", class: "text-dark" %></br>
       </tr>
     <% end %>
 </th>
